--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="row">
           <div class="section-title">
         <div>
-<h4>A completamento di tutti i servizi tecnici di raccolta e analisi dati, affianchiamo i nostro clienti durante tutte le fasi progettuali con attività di <b>SUPPORTO e FORMAZIONE</b></h4>
+<h4>A completamento di tutti i servizi tecnici di raccolta e analisi dati, affianchiamo i nostri clienti durante tutte le fasi progettuali con attività di <b>SUPPORTO e FORMAZIONE</b></h4>
 </div>      </div>
 </div>
     </section><!-- End Services Section -->
@@ -515,24 +515,21 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Link utili</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+               <li><i class="bx bx-chevron-right"></i> <a href="#">Chi siamo</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servizi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Progetti</a></li>
+             
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>I-R-S </h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Termini di servizio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              
             </ul>
           </div>
 
