--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Siamo professionisti nel settore del telerilevamento.</h3>
             <p class="fst-italic">
-              Fondata nel 2014, IRS è un'azienda che punta all'eccelleza e garantisce risultati affidabili.
+              Fondata nel 2014, IRS è un'azienda che punta all'eccellenza e garantisce risultati affidabili.
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Competenze tecniche avanzate.</li>
