--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
                
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/italian-remote-sensing-srl" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.instagram.com/italianremotesensing/" class="instagram"><i class="bx bxl-instagram"></i></a>
               
               </div>
             </div>
