--- a/portfolio-details-progetto1.html
+++ b/portfolio-details-progetto1.html
@@ -263,7 +263,10 @@
           </div>
   
         </div>
-    </section><!-- End Portfolio Details Section -->
+    </section>
+  <!-- End Portfolio Details Section -->
+
+
 
   </main>
   <!-- End #main -->
@@ -280,15 +283,7 @@
               <h3>I-R-S</h3>
               <h5>Italian Remote Sensing s.r.l.</h5>
               <h5>Partita iva 01631860705</h5>
-              <h6><b>Sede legale:</b></h6>
-              <p>
-                Via Vittorio Emanuele II n.93,  <br>
-                86033 Montefalcone nel Sannio (CB)<br><br>
-                
-                <h6><b>Sede operativa:</b></h6>
-              <p>
-                Via Giacomo Peroni n. 386,  <br>
-                00131 Roma<br><br>
+              <br><br>
                 <strong>Telefono:</strong> +39 0874 1896543<br>
                 <strong>Email:</strong> info@i-r-s.it<br>
                
