--- a/index.html
+++ b/index.html
@@ -103,38 +103,7 @@
   </section><!-- End Hero -->
 
   <main id="main">
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <h3>Siamo professionisti nel settore del telerilevamento.</h3>
-            <p class="fst-italic">
-              Fondata nel 2014, IRS è un'azienda che punta all'eccellenza e garantisce risultati affidabili.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> Competenze tecniche avanzate.</li>
-              <li><i class="bi bi-check-circle"></i> Attrezzature di ultima generazione e una flotta aerea proprietaria.</li>
-              <li><i class="bi bi-check-circle"></i> Certificazioni ed esperienze progettuali di successo nazionale e internazionale.</li>
-            </ul>
-            <p>
-              Siamo qui per ascoltarti, collaborare e portare avanti la tua visione. 
-            </p>
-            <div class="btn-buy">Leggi il nostro <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Codice Etico</u></b></a></div>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <img src="assets/img/certifications_land.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
-
+    
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
       <div class="container">
@@ -169,6 +138,38 @@
 
       </div>
     </section><!-- End Why Us Section -->
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+            <h3>Siamo professionisti nel settore del telerilevamento.</h3>
+            <p class="fst-italic">
+              Fondata nel 2014, IRS è un'azienda che punta all'eccellenza e garantisce risultati affidabili.
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i> Competenze tecniche avanzate.</li>
+              <li><i class="bi bi-check-circle"></i> Attrezzature di ultima generazione e una flotta aerea proprietaria.</li>
+              <li><i class="bi bi-check-circle"></i> Certificazioni ed esperienze progettuali di successo nazionale e internazionale.</li>
+            </ul>
+            <p>
+              Siamo qui per ascoltarti, collaborare e portare avanti la tua visione. 
+            </p>
+            <div class="btn-buy">Leggi il nostro <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Codice Etico</u></b></a></div>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+            <img src="assets/img/certifications_land.png" class="img-fluid" alt="">
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
+
 
     <!-- ======= Flotta Section ======= -->
     <section id="clients" class="clients">
@@ -355,7 +356,7 @@
               <h4>Vista di... </h4>
               <p>20xx</p>
               <a href="assets/img/progetti/land_2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
             </div>
           </div>
 
@@ -379,7 +380,7 @@
               <h4>Vulcanair </h4>
               <p></p>
               <a href="assets/img/progetti/flotta_2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
             </div>
           </div>
 
@@ -390,7 +391,7 @@
               <h4>Aereo </h4>
               <p></p>
               <a href="assets/img/progetti/flotta_3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></i></a>
             </div>
           </div>
 
@@ -434,7 +435,7 @@
               <h4>Rilievo Linee elettriche TERNA </h4>
               <p>2020</p>
               <a href="assets/img/progetti/progetto_8.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo Linee elettriche TERNA "><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"></a>
             </div>
           </div>     
 
