--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
               <img src="assets/img/news/linkedin_last_2.jpg" alt="">
               
               <span>Dicembre 2024</span>
-              <p>✈️✈️✈️✈️ Italian Remote Sensing Srl sarà sponsor, espositore e relatore all'hashtag#ASITA2024 che si terrà dal 9 al 13 Dicembre 2024 a Padova.
+              <p>✈️✈️✈️✈️ Italian Remote Sensing Srl sarà sponsor, espositore e relatore all'#ASITA2024 che si terrà dal 9 al 13 Dicembre 2024 a Padova.
                 Vi aspettiamo!!!!!</p>
               <div class="social">
                 
