--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><a class="nav-link scrollto active" href="#hero">I-R-S</a></li>
           <li><a class="nav-link scrollto" href="#about">Chi Siamo</a></li>
           <li><a class="nav-link scrollto" href="#services">Servizi</a></li>
-          <li><a class="nav-link scrollto " href="portfolio-details-progetto1.html">Progetti</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Progetti</a></li>
           
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -112,7 +112,7 @@
 
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
-              <span><img src="assets/img/IRS/Italian.png" class="img-fluid" alt="Italian"></span>
+              <span><img src="assets/img/IRS/i.png" class="img-fluid" alt="Italian"></span>
               <h4></h4>
               <p>Coniughiamo l'arte del sapere e del <b>saper fare italiano</b> con le tecnologie più avanzate per offrirti soluzioni precise, sicure e personalizzate.</p>
             </div>
@@ -120,7 +120,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
-              <span><img src="assets/img/IRS/Remote.png" class="img-fluid" alt="Remote"></span>
+              <span><img src="assets/img/IRS/r.png" class="img-fluid" alt="Remote"></span>
               <h4></h4>
               <p><b>La distanza non è un ostacolo.</b> Le nostre tecnologie di rilevazione remota ti avvicinano al territorio da una nuova prospettiva.</p>
             </div>
@@ -128,7 +128,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <span><img src="assets/img/IRS/Sensing.png" class="img-fluid" alt="Sensing"></span>
+              <span><img src="assets/img/IRS/s.png" class="img-fluid" alt="Sensing"></span>
               <h4> </h4>
               <p><b>Un occhio attento sul mondo.</b> I sensori che usiamo ci permettono di monitorare e analizzare l'ambiente, le infrastrutture e le risorse naturali.</p>
             </div>
@@ -206,23 +206,23 @@
 
           <div class="col-lg-3 col-md-8 col-12">
             <img src="assets/img/tools/tool_1.png" class="img-fluid" alt="Partenavia P68C-TC">
-            <p>Camera aerofotogrammetrica digitale (Ultramount)</p>
+            <p>Camera aerofotogrammetrica digitale (Vexcel UltraCamEagle Mk1)</p>
           </div>
 
           <div class="col-lg-3 col-md-8 col-12">
             <img src="assets/img/tools/tool_2.png" class="img-fluid" alt="Vulcanair P68 Obs2">
-            <p>Camera aerofotogrammetrica digitale (Vexcel)</p>
+            <p>Camera Aerofotogrammetrica Nadir+Oblique” (Vexcel UltraCamOsprey 4.1)</p>
           </div>
 
           <div class="col-lg-3 col-md-8 col-12">
             <img src="assets/img/tools/tool_3.png" class="img-fluid" alt="Vulcanair P68 Obs">
-            <p>2x LIDAR Riegl VQ780ii 
+            <p>2x LiDAR Riegl VQ780ii 
             </p>
           </div>
 
           <div class="col-lg-3 col-md-8 col-12">
             <img src="assets/img/tools/tool_4.png" class="img-fluid" alt="Vulcanair P68 Obs">
-            <p>LIDAR Riegl VQ1460 (con girostabilizzatore)</p>
+            <p>LiDAR Riegl VQ1460 (con girostabilizzatore)</p>
           </div>
 
 
@@ -249,7 +249,7 @@
               <div class="icon"><i class="bx bx-landscape"></i></div>
               <h4><a href="">Rilievi:</a></h4>
               <h5>Aerofotogrammetrici digitali,</h5> 
-                <h5>LIDAR,</h5> 
+                <h5>LiDAR,</h5> 
                 <h5>Termici,</h5> 
                 <h5>Multi e iperspettrali.</h5>
               </div>
@@ -410,9 +410,9 @@
             <a href="portfolio-details-progetto1.html#project" class="details-link" title="More Details">
             <img src="assets/img/progetti/progetto_6.png" class="img-fluid" alt=""></a>
             <div class="portfolio-info">
-              <h4>Rilievo Lidar Alpi </h4>
+              <h4>Rilievo LiDAR Alpi </h4>
               <p>2019</p>
-              <a href="assets/img/progetti/progetto_6.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo Lidar Alpi"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/progetti/progetto_6.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo LiDAR Alpi"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"></a>
             </div>
           </div>
@@ -421,9 +421,9 @@
             <a href="portfolio-details-progetto1.html#project" class="details-link" title="More Details">
             <img src="assets/img/progetti/progetto_7.png" class="img-fluid" alt=""></a>
             <div class="portfolio-info">
-              <h4>Rilievo Lidar Alpi </h4>
+              <h4>Rilievo LiDAR Alpi </h4>
               <p>2019</p>
-              <a href="assets/img/progetti/progetto_7.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo Lidar Alpi"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/progetti/progetto_7.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo LiDAR Alpi"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"></a>
             </div>
           </div>
@@ -443,9 +443,9 @@
             <a href="portfolio-details-progetto1.html#project" class="details-link" title="More Details">
             <img src="assets/img/progetti/progetto_11.png" class="img-fluid" alt=""></a>
             <div class="portfolio-info">
-              <h4>Rilievo lidar per Engineering Ingegneria Informatica S.p.A  </h4>
+              <h4>Rilievo LiDAR per Engineering Ingegneria Informatica S.p.A  </h4>
               <p>2023-2024</p>
-              <a href="assets/img/progetti/progetto_11.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo lidar per Engineering Ingegneria Informatica S.p.A"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/progetti/progetto_11.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Rilievo LiDAR per Engineering Ingegneria Informatica S.p.A"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"></a>
             </div>
           </div>
@@ -671,14 +671,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Day</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>I-R-S Italian Remote Sensing</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        
       </div>
     </div>
   </footer><!-- End Footer -->
