--- a/index_eng.html
+++ b/index_eng.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -47,7 +47,7 @@
       <div class="social-links d-none d-md-block">
         <a href="https://www.linkedin.com/company/italian-remote-sensing-srl" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
         <a href="https://www.instagram.com/italianremotesensing/" class="instagram"><i class="bi bi-instagram"></i></i></a>
-        <span><a href="index_eng.html" class="english version"><img src="assets/img/eng-flag.png" style="width:20%"></a>
+        <span><a href="index.html" class="english version"><img src="assets/img/ita_flag.png" style="width:20%"></a>
         </span></div>
     </div>
   </section>
@@ -63,9 +63,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">I-R-S</a></li>
-          <li><a class="nav-link scrollto" href="#about">Chi Siamo</a></li>
-          <li><a class="nav-link scrollto" href="#services">Servizi</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Progetti</a></li>
+          <li><a class="nav-link scrollto" href="#about">About us</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Experience</a></li>
           
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -84,7 +84,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul> -->
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contatti</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -95,10 +95,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <h1>Rilievi Aerei di Precisione</h1>
-      <h2>Con le nostre tecniche di rilievo aereo di ultima generazione, catturiamo il mondo in tutta la sua bellezza e complessità.</h2>
-      <h5 class="tx-or"><em> Forniamo analisi accurate per decisioni strategiche.</em></h5>
-      <div><a href="#about" class="btn-get-started scrollto">Scopri I-R-S</a></div>
+      <h1>High-Precision Aerial Surveys</h1>
+      <h2>Using our latest aerial survey technologies, we capture the world in all its beauty and complexity.</h2>
+      <h5 class="tx-or"><em>We provide accurate analysis for strategic decision-making.</em></h5>
+      <div><a href="#about" class="btn-get-started scrollto">Discover I-R-S</a></div>
     </div>
   </section><!-- End Hero -->
 
@@ -114,7 +114,7 @@
             <div class="box">
               <span><img src="assets/img/IRS/i.png" class="img-fluid" alt="Italian"></span>
               <h4></h4>
-              <p>Coniughiamo l'arte del sapere e del <b>saper fare italiano</b> con le tecnologie più avanzate per offrirti soluzioni precise, sicure e personalizzate.</p>
+              <p>Combining the best of<b> Italian expertise and advanced technology</b>, we provide you with tailored solutions that meet your exact needs.</p>
             </div>
           </div>
 
@@ -122,16 +122,14 @@
             <div class="box">
               <span><img src="assets/img/IRS/r.png" class="img-fluid" alt="Remote"></span>
               <h4></h4>
-              <p><b>La distanza non è un ostacolo.</b> Le nostre tecnologie di rilevazione remota ti avvicinano al territorio da una nuova prospettiva.</p>
-            </div>
+              <p><b>Explore the territory like never before.</b> Without distance limitations, our technologies offer you an unprecedented view of the territory.</p></div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <span><img src="assets/img/IRS/s.png" class="img-fluid" alt="Sensing"></span>
               <h4> </h4>
-              <p><b>Un occhio attento sul mondo.</b> I sensori che usiamo ci permettono di monitorare e analizzare l'ambiente, le infrastrutture e le risorse naturali.</p>
-            </div>
+              <p><b>We observe the world with new eyes.</b> Thanks to our sensors, we monitor and analyze the environment in depth.</p></div>
           </div>
 
         </div>
@@ -148,19 +146,18 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <h3>Siamo professionisti nel settore del telerilevamento.</h3>
+            <h3>We are professionals in the remote sensing field.</h3>
             <p class="fst-italic">
-              Fondata nel 2014, IRS è un'azienda che punta all'eccellenza e garantisce risultati affidabili.
-            </p>
+                Founded in 2014, IRS is a company dedicated to excellence and committed to delivering reliable results.</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Competenze tecniche avanzate.</li>
-              <li><i class="bi bi-check-circle"></i> Attrezzature di ultima generazione e una flotta aerea proprietaria.</li>
-              <li><i class="bi bi-check-circle"></i> Certificazioni ed esperienze progettuali di successo nazionale e internazionale.</li>
+              <li><i class="bi bi-check-circle"></i> In-depth technical knowledge.</li>
+              <li><i class="bi bi-check-circle"></i> Advanced technology and a privately owned air fleet.</li>
+              <li><i class="bi bi-check-circle"></i> Proven success in projects, both nationally and internationally, backed by relevant certifications.</li>
             </ul>
             <p>
-              Siamo qui per ascoltarti, collaborare e portare avanti la tua visione. 
+                Our goal is to listen to your needs, work together with you, and empower your vision.
             </p>
-            <div class="btn-buy">Leggi il nostro <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Codice Etico</u></b></a></div>
+            <div class="btn-buy">Read our <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Code of Ethics</u></b></a></div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <img src="assets/img/certifications_land.png" class="img-fluid" alt="">
@@ -211,7 +208,7 @@
 
           <div class="col-lg-3 col-md-8 col-12">
             <img src="assets/img/tools/tool_2.png" class="img-fluid" alt="Vulcanair P68 Obs2">
-            <p>Camera Aerofotogrammetrica Nadir+Oblique <br>(Vexcel UltraCamOsprey 4.1)</p>
+            <p>Camera Aerofotogrammetrica Nadir+Oblique” (Vexcel UltraCamOsprey 4.1)</p>
           </div>
 
           <div class="col-lg-3 col-md-8 col-12">
