--- a/index_eng.html
+++ b/index_eng.html
@@ -47,8 +47,7 @@
       <div class="social-links d-none d-md-block">
         <a href="https://www.linkedin.com/company/italian-remote-sensing-srl" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
         <a href="https://www.instagram.com/italianremotesensing/" class="instagram"><i class="bi bi-instagram"></i></i></a>
-        <span><a href="index.html" class="english version"><img src="assets/img/ita_flag.png" style="width:20%"></a>
-        </span></div>
+        </div>
     </div>
   </section>
 
@@ -66,6 +65,7 @@
           <li><a class="nav-link scrollto" href="#about">About us</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Experience</a></li>
+          <li><a class="nav-link scrollto " href="#team">News</a></li>
           
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -85,6 +85,8 @@
             </ul> -->
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link" href="index.html"><img src="assets/img/ita_flag.png" style="width:100%"></a></li>
+        
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
