--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
             <p>
               Siamo qui per ascoltarti, collaborare e portare avanti la tua visione. 
             </p>
-            <div class="btn-buy">Leggi il nostro <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Codice Etico</u></b></a> e la nostra <a href="assets/img/PolicyDirittiUmani_IRS.pdf" target="_blank"><b><u>Policy sui Diritti Umani</u></b></a>.</div>
+            <div class="btn-buy">Leggi il nostro <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Codice Etico</u></b></a> e la nostra <a href="assets/img/PolicyDirittiUmani_IRS.pdf" target="_blank"><b><u>Policy sui Diritti Umani</u></b></a>.
+            </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <img src="assets/img/certifications_land.png" class="img-fluid" alt="">
@@ -564,6 +565,14 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
+              <div>
+              <div class="form-group mt-3">
+              <label for="flag-option">
+                <input type="checkbox" id="flag-option" name="flag_option" required>
+                *Spuntando questa casella, confermi di aver letto e accettato la nostra <a href="privacy_policy.html">Privacy Policy</a>
+              </label>
+            </div>
+            </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
@@ -591,7 +600,6 @@
                 <p>
                   Via Giacomo Peroni n. 386,  <br>
                   00131 Roma</p>
-                
                 
             </div>
           </div>
