--- a/index_eng.html
+++ b/index_eng.html
@@ -164,7 +164,7 @@
             <p>
                 Our goal is to listen to your needs, work together with you, and empower your vision.
             </p>
-            <div class="btn-buy">Read our <a href="assets/img/Codice EticoIRS.pdf" target="_blank"><b><u>Code of Ethics</u></b></a> and our <a href="assets/img/PolicyDirittiUmani_IRS.pdf" target="_blank"><b><u>Human Rights Protection Policy</u></b></a>
+            <div class="btn-buy">Read our <a href="assets/img/docs/CodeOfEthics.pdf" target="_blank"><b><u>Code of Ethics</u></b></a> and our <a href="assets/img/docs/HumanRightsPolicyIRS.pdf" target="_blank"><b><u>Human Rights Protection Policy</u></b></a>
           </div>
         </div>
       
