--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Siamo professionisti nel settore del telerilevamento.</h3>
@@ -171,12 +170,13 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
-            <img src="assets/img/certifications_land.png" class="img-fluid" alt="">
+            <img src="assets/img/certifications_land.png" class="img-fluid" alt="a group of certifications marks">
           </div>
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
+    <!-- End About Section -->
 
 
     <!-- ======= Flotta Section ======= -->
