--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -178,10 +178,13 @@ Si ricorda ai clienti/fornitori che hanno il diritto, in ogni momento, di revoca
   <a href="https://www.garanteprivacy.it/web/guest/home/docweb/-/docweb-display/docweb/9041356" target="_blank">https://www.garanteprivacy.it/web/guest/home/docweb/-/docweb-display/docweb/</a>
 </p>
 </ol>
-
-              </p>
-            </div>
-          </section>
+<section class="mybtn">
+<div class="text-center mybtn-btn">
+<a class="mybtn" href="assets/img/docs/Informativa Privacy.pdf" target="_blank">SCARICA IN FORMATO PDF</a>
+</div>
+</section>
+             
+</section>
 
  </main><!-- End #main -->
   <!-- ======= Footer ======= -->
