--- a/index.html
+++ b/index.html
@@ -151,8 +151,6 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-          </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>Siamo professionisti nel settore del telerilevamento.</h3>
             <p class="fst-italic">
@@ -546,24 +544,24 @@
           <div class="section-title">
             <span>Contatti</span>
             <h2>Contatti</h2>
-            <p>Siamo lieti di recepire le tue esigenze. Non esitare a contattarci.</p>
+            <p>Siamo lieti di recepire le tue esigenze. Scrivici un messaggio:</p>
           </div>
 
           <div class="col-lg-12">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Nome completo" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Oggetto" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Messaggio" required></textarea>
               </div>
               <div>
               <div class="form-group mt-3">
@@ -578,7 +576,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Invia Messaggio</button></div>
             </form>
           </div>
 
