--- a/index.html
+++ b/index.html
@@ -336,33 +336,33 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="portfolio-details-progetto1.html#land" class="details-link" title="More Details">
-            <img src="assets/img/progetti/land_1.jpg" class="img-fluid" alt="vista aerea su isola"></a>
+            <img src="assets/img/progetti/slider_viste/01_landTevere.jpg" class="img-fluid" alt="vista aerea su isola"></a>
             <div class="portfolio-info">
-              <h4>Vista di... </h4>
-              <p>20xx</p>
-              <a href="assets/img/progetti/land_1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
+              <h4>Fiume Tevere, Roma </h4>
+              <p>2017</p>
+              <a href="assets/img/progetti/slider_viste/01_landTevere.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Fiume Tevere, Roma"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="portfolio-details-progetto1.html#land" class="details-link" title="More Details">
-            <img src="assets/img/progetti/land_3.jpg" class="img-fluid" alt="vista aerea"></a>
+            <img src="assets/img/progetti/slider_viste/02_landVenezia.jpg" class="img-fluid" alt="vista aerea"></a>
             <div class="portfolio-info">
-              <h4>Vista di... </h4>
-              <p>20xx</p>
-              <a href="assets/img/progetti/land_3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
+              <h4>Vista di Venezia </h4>
+              <p>2024</p>
+              <a href="assets/img/progetti/slider_viste/02_landVenezia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Venezia"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <a href="portfolio-details-progetto1.html#land" class="details-link" title="More Details">
-                        <img src="assets/img/progetti/land_2.jpg" class="img-fluid" alt="vista aerea"></a>
+                        <img src="assets/img/progetti/slider_viste/03_landAzorre-100.jpg" class="img-fluid" alt="vista aerea"></a>
             <div class="portfolio-info">
-              <h4>Vista di... </h4>
-              <p>20xx</p>
-              <a href="assets/img/progetti/land_2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
+              <h4>Isola delle Azzorre, Portocgallo </h4>
+              <p>2024</p>
+              <a href="assets/img/progetti/slider_viste/03_landAzorre-100.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Un'sola delle Azzorre"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
             </div>
           </div>
@@ -373,7 +373,7 @@
             <a href="portfolio-details-progetto1.html#flotta" class="details-link" title="More Details">
             <img src="assets/img/progetti/flotta_1.jpg" class="img-fluid" alt="Mezzi aerei"></a>
             <div class="portfolio-info">
-              <h4>Vulcanair OBS2</h4>
+              <h4>Vulcanair P68 Obs2</h4>
               <p></p>
               <a href="assets/img/progetti/flotta_1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
@@ -384,7 +384,7 @@
             <a href="portfolio-details-progetto1.html#flotta" class="details-link" title="More Details">
             <img src="assets/img/progetti/flotta_2.jpg" class="img-fluid" alt="Mezzi aerei"></a>
             <div class="portfolio-info">
-              <h4>Vulcanair </h4>
+              <h4>Vulcanair P68 Obs</h4>
               <p></p>
               <a href="assets/img/progetti/flotta_2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></a>
@@ -395,7 +395,7 @@
             <a href="portfolio-details-progetto1.html#flotta" class="details-link" title="More Details">
             <img src="assets/img/progetti/flotta_3.jpg" class="img-fluid" alt="Mezzi aerei"></a>
             <div class="portfolio-info">
-              <h4>Aereo </h4>
+              <h4>Merlin </h4>
               <p></p>
               <a href="assets/img/progetti/flotta_3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Individuazione di coperture in cemento amianto"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-progetto1.html" class="details-link" title="More Details"></i></a>
@@ -637,10 +637,11 @@
             <div class="container">
               <h3></h3>
               <h5 class="Center">Seguici sui social</h5>
+              <br>
                 <div class="social-links mt-3">
                 <a href="https://www.linkedin.com/company/italian-remote-sensing-srl" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
                 <a href="https://www.instagram.com/italianremotesensing/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-              
+              <br>
               </div>
             </div>
           </div>
