--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@
         <div class="row">
           <div class="section-title">
         <div>
-          <br>
-<h4>A completamento di tutti i servizi tecnici di raccolta e analisi dati, affianchiamo i nostri clienti durante tutte le fasi progettuali con attività di <b>SUPPORTO e FORMAZIONE</b></h4>
+          <div class="row">
+            <div class="col-lg-12 col-md-8 col-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon-box">
+<h5>A completamento di tutti i servizi tecnici di raccolta e analisi dati, affianchiamo i nostri clienti durante tutte le fasi progettuali con attività di <b>SUPPORTO e FORMAZIONE</b></h5>
 </div>      </div>
 </div>
     </section>
@@ -569,6 +571,7 @@
                 <input type="checkbox" id="flag-option" name="flag_option" required>
                 *Spuntando questa casella, confermi di aver letto e accettato la nostra <a href="privacy_policy.html">Privacy Policy</a>
               </label>
+              <br>
             </div>
             </div>
               <div class="my-3">
