--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -220,11 +220,11 @@ Si ricorda ai clienti/fornitori che hanno il diritto, in ogni momento, di revoca
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Link utili</h4>
             <ul>
-               <li><i class="bx bx-chevron-right"></i> <a href="#about">Chi siamo</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Servizi</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Progetti</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#team">News</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contatti</a></li>
+               <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">Chi siamo</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Servizi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Progetti</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">News</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#contact">Contatti</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">English</a></li>
              
             </ul>
