--- a/index.html
+++ b/index.html
@@ -284,12 +284,9 @@
           </div>
 
         </div>
-        
-        <div class="row">
-          <div class="section-title">
-        <div>
-          <div class="row">
-            <div class="col-lg-12 col-md-8 col-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="section-title">
+           <div class="row">
+            <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
 <h5>A completamento di tutti i servizi tecnici di raccolta e analisi dati, affianchiamo i nostri clienti durante tutte le fasi progettuali con attività di <b>SUPPORTO e FORMAZIONE</b></h5>
 </div>      </div>
