--- a/index_eng.html
+++ b/index_eng.html
@@ -284,7 +284,7 @@
         </div>
           
           <div class="row">
-            <div class="col-lg-12 col-md-8 col-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
             <h5>To complete all the technical services of data collection and analysis, we support our customers during all the project phases with <b>SUPPORT and TRAINING  activities</b></h5></div>      
           </div>
